--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
+    "daisyui": "^3.8.1",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "latest",
