--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.5.1",
     "mongoose": "^7.5.3",
     "next": "latest",
+    "query-string": "^8.1.0",
+    "rc-pagination": "^3.6.1",
     "react": "latest",
     "react-dom": "latest",
     "react-star-ratings": "^2.3.0"
