added user login, registration

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "@types/react-star-ratings": "^2.3.1",
     "axios": "^1.5.1",
+    "bcryptjs": "^2.4.3",
     "mongoose": "^7.5.3",
     "next": "latest",
     "next-auth": "^4.23.2",
@@ -19,6 +21,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
     "react-star-ratings": "^2.3.0"
   },
   "devDependencies": {
