--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-star-ratings": "^2.3.1",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "countries-list": "^3.0.5",
     "mongoose": "^7.5.3",
     "next": "latest",
     "next-auth": "^4.23.2",
