--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react-star-ratings": "^2.3.1",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "countries-list": "^3.0.5",
     "mongoose": "^7.5.3",
+    "multer": "^1.4.5-lts.1",
     "next": "latest",
     "next-auth": "^4.23.2",
     "query-string": "^8.1.0",
