--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.7",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "countries-list": "^3.0.5",
@@ -22,7 +24,8 @@
     "react-dom": "latest",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
-    "react-star-ratings": "^2.3.0"
+    "react-star-ratings": "^2.3.0",
+    "stripe": "^13.9.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
