--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@stripe/react-stripe-js": "^2.3.1",
-    "@stripe/stripe-js": "^2.1.7",
-    "axios": "^1.5.1",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "countries-list": "^3.0.5",
+    "crypto-js": "^4.2.0",
     "mongoose": "^7.5.3",
-    "next": "latest",
-    "next-auth": "^4.23.2",
-    "next-cloudinary": "^4.23.1",
+    "next": "^14.2.3",
+    "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.5.2",
+    "nodemailer": "^6.9.13",
     "query-string": "^8.1.0",
     "rc-pagination": "^3.6.1",
     "react": "latest",
@@ -28,14 +29,16 @@
     "stripe": "^13.9.0"
   },
   "devDependencies": {
+    "@tawk.to/tawk-messenger-react": "2.0.2",
     "@types/bcryptjs": "^2.4.4",
+    "@types/crypto-js": "^4.2.2",
     "@types/multer": "^1.4.8",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/react-star-ratings": "^2.3.1",
     "autoprefixer": "latest",
-    "daisyui": "^3.8.1",
+    "daisyui": "^4.11.1",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "latest",
