--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rc-pagination": "^3.6.1",
     "react": "latest",
     "react-dom": "latest",
+    "react-error-boundary": "^4.0.13",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-star-ratings": "^2.3.0",
