--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "countries-list": "^3.0.5",
