--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/react-star-ratings": "^2.3.1",
+    "@wixc3/react-board": "^4.6.2",
     "autoprefixer": "latest",
     "daisyui": "^4.11.1",
     "eslint": "latest",
